<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.chinmay.project.MainActivity">

    <Button
        android:id="@+id/stroop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/brown"
        android:text="@string/game1"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/brown"
        android:text="@string/game2"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/brown"
        android:text="@string/game3"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/brown"
        android:text="@string/game4"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/brain_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/brown"
        android:text="@string/game5"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/brown"
        android:text="@string/settings"
        android:textColor="@color/white" />
</LinearLayout>
